# horse

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
